crates/liter-llm-ffi/include/liter_llm.h

typedef struct LITERLLMChatCompletionRequest LITERLLMChatCompletionRequest;
typedef struct LITERLLMChatCompletionResponse LITERLLMChatCompletionResponse;
typedef struct LITERLLMCreateImageRequest LITERLLMCreateImageRequest;
typedef struct LITERLLMCreateTranscriptionRequest LITERLLMCreateTranscriptionRequest;
typedef struct LITERLLMCustomProviderConfig LITERLLMCustomProviderConfig;
typedef struct LITERLLMDefaultClient LITERLLMDefaultClient;
typedef struct LITERLLMEmbeddingRequest LITERLLMEmbeddingRequest;
typedef struct LITERLLMEmbeddingResponse LITERLLMEmbeddingResponse;
typedef struct LITERLLMImagesResponse LITERLLMImagesResponse;
typedef struct LITERLLMModelsListResponse LITERLLMModelsListResponse;
typedef struct LITERLLMModerationRequest LITERLLMModerationRequest;
typedef struct LITERLLMModerationResponse LITERLLMModerationResponse;
typedef struct LITERLLMOcrRequest LITERLLMOcrRequest;
typedef struct LITERLLMOcrResponse LITERLLMOcrResponse;
typedef struct LITERLLMRerankRequest LITERLLMRerankRequest;
typedef struct LITERLLMRerankResponse LITERLLMRerankResponse;
typedef struct LITERLLMSearchRequest LITERLLMSearchRequest;
typedef struct LITERLLMSearchResponse LITERLLMSearchResponse;
typedef struct LITERLLMTranscriptionResponse LITERLLMTranscriptionResponse;
int32_t literllm_last_error_code(void);
const char *literllm_last_error_context(void);
void literllm_free_string(char *ptr);
LITERLLMChatCompletionRequest *literllm_chat_completion_request_from_json(const char *json);
void literllm_chat_completion_request_free(LITERLLMChatCompletionRequest *ptr);
char *literllm_chat_completion_response_to_json(const LITERLLMChatCompletionResponse *ptr);
void literllm_chat_completion_response_free(LITERLLMChatCompletionResponse *ptr);
LITERLLMEmbeddingRequest *literllm_embedding_request_from_json(const char *json);
void literllm_embedding_request_free(LITERLLMEmbeddingRequest *ptr);
char *literllm_embedding_response_to_json(const LITERLLMEmbeddingResponse *ptr);
void literllm_embedding_response_free(LITERLLMEmbeddingResponse *ptr);
LITERLLMCreateImageRequest *literllm_create_image_request_from_json(const char *json);
void literllm_create_image_request_free(LITERLLMCreateImageRequest *ptr);
char *literllm_images_response_to_json(const LITERLLMImagesResponse *ptr);
void literllm_images_response_free(LITERLLMImagesResponse *ptr);
LITERLLMCreateTranscriptionRequest *literllm_create_transcription_request_from_json(const char *json);
void literllm_create_transcription_request_free(LITERLLMCreateTranscriptionRequest *ptr);
char *literllm_transcription_response_to_json(const LITERLLMTranscriptionResponse *ptr);
void literllm_transcription_response_free(LITERLLMTranscriptionResponse *ptr);
LITERLLMModerationRequest *literllm_moderation_request_from_json(const char *json);
void literllm_moderation_request_free(LITERLLMModerationRequest *ptr);
char *literllm_moderation_response_to_json(const LITERLLMModerationResponse *ptr);
void literllm_moderation_response_free(LITERLLMModerationResponse *ptr);
LITERLLMRerankRequest *literllm_rerank_request_from_json(const char *json);
void literllm_rerank_request_free(LITERLLMRerankRequest *ptr);
char *literllm_rerank_response_to_json(const LITERLLMRerankResponse *ptr);
void literllm_rerank_response_free(LITERLLMRerankResponse *ptr);
LITERLLMSearchRequest *literllm_search_request_from_json(const char *json);
void literllm_search_request_free(LITERLLMSearchRequest *ptr);
char *literllm_search_response_to_json(const LITERLLMSearchResponse *ptr);
void literllm_search_response_free(LITERLLMSearchResponse *ptr);
LITERLLMOcrRequest *literllm_ocr_request_from_json(const char *json);
void literllm_ocr_request_free(LITERLLMOcrRequest *ptr);
char *literllm_ocr_response_to_json(const LITERLLMOcrResponse *ptr);
void literllm_ocr_response_free(LITERLLMOcrResponse *ptr);
char *literllm_models_list_response_to_json(const LITERLLMModelsListResponse *ptr);
void literllm_models_list_response_free(LITERLLMModelsListResponse *ptr);
void literllm_default_client_free(LITERLLMDefaultClient *ptr);
LITERLLMChatCompletionResponse *literllm_default_client_chat(const LITERLLMDefaultClient *this_,
                                                             const LITERLLMChatCompletionRequest *req);
char *literllm_default_client_chat_stream(const LITERLLMDefaultClient *_this,
                                          const LITERLLMChatCompletionRequest *_req);
LITERLLMEmbeddingResponse *literllm_default_client_embed(const LITERLLMDefaultClient *this_,
                                                         const LITERLLMEmbeddingRequest *req);
LITERLLMModelsListResponse *literllm_default_client_list_models(const LITERLLMDefaultClient *this_);
LITERLLMImagesResponse *literllm_default_client_image_generate(const LITERLLMDefaultClient *this_,
                                                               const LITERLLMCreateImageRequest *req);
LITERLLMTranscriptionResponse *literllm_default_client_transcribe(const LITERLLMDefaultClient *this_,
                                                                  const LITERLLMCreateTranscriptionRequest *req);
LITERLLMModerationResponse *literllm_default_client_moderate(const LITERLLMDefaultClient *this_,
                                                             const LITERLLMModerationRequest *req);
LITERLLMRerankResponse *literllm_default_client_rerank(const LITERLLMDefaultClient *this_,
                                                       const LITERLLMRerankRequest *req);
LITERLLMSearchResponse *literllm_default_client_search(const LITERLLMDefaultClient *this_,
                                                       const LITERLLMSearchRequest *req);
LITERLLMOcrResponse *literllm_default_client_ocr(const LITERLLMDefaultClient *this_,
                                                 const LITERLLMOcrRequest *req);
LITERLLMCustomProviderConfig *literllm_custom_provider_config_from_json(const char *json);
void literllm_custom_provider_config_free(LITERLLMCustomProviderConfig *ptr);
LITERLLMDefaultClient *literllm_create_client(const char *api_key,
                                              const char *base_url,
                                              uint64_t timeout_secs,
                                              uint32_t max_retries,
                                              const char *model_hint);
LITERLLMDefaultClient *literllm_create_client_from_json(const char *json);
int32_t literllm_register_custom_provider(const LITERLLMCustomProviderConfig *config);
int32_t literllm_unregister_custom_provider(const char *name);